...
                        \(currentResultText)
                        Количество сыгранных квизов: \(totalGames)
                        Рекорд: \(bestGame.correct)/\(bestGame.total) (\(bestGameDate))
                        Средняя точность: \(totalAccuracy)%
                        """
            let viewModel = QuizResultsViewModel( // 2
                title: "Этот раунд окончен!",
                text: message,
                buttonText: "Сыграть ещё раз")
            viewController?.show(quiz: viewModel) // 3
        } else {
            self.switchToNextQuestion()
            questionFactory?.requestNextQuestion()
...
